// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountryListRow should render 1`] = `
<span
  class=""
  style="display: contents;"
>
  <span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="_backgroundColor-0hover-surface2 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _height-t-size-spac100347420 _pr-t-space-spa1360334051 _pl-t-space-spa1360334051 _justifyContent-space-betwe3241 _alignItems-center _cursor-pointer"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa1360334080"
        >
          <div
            class="is_Avatar _display-flex _flexBasis-auto _boxSizing-border-box _minHeight-32px _minWidth-32px _flexShrink-0 _flexDirection-column _alignItems-center _justifyContent-center _position-relative _overflowX-hidden _overflowY-hidden _width-32px _height-32px _maxWidth-32px _maxHeight-32px _borderTopLeftRadius-100000px _borderTopRightRadius-100000px _borderBottomRightRadius-100000px _borderBottomLeftRadius-100000px _pt-0px _pr-0px _pb-0px _pl-0px"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-absolute _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _top-0px _left-0px _right-0px _bottom-0px _zIndex-1"
            >
              <div
                aria-label="Country flag"
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="width: 32px; height: 32px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(https://images-country.meld.io/US/flag.svg);"
                />
                <img
                  alt="Country flag"
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="https://images-country.meld.io/US/flag.svg"
                />
              </div>
            </div>
            <div
              class="is_AvatarFallback _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-absolute _top-0px _left-0px _right-0px _bottom-0px _zIndex-0 _backgroundColor-neutral3"
            />
          </div>
          <span
            class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
            data-disable-theme="true"
          >
            United States
          </span>
        </div>
      </div>
      <div
        style="display: contents;"
      />
    </span>
  </span>
</span>
`;

exports[`CountryListRow should render selected country 1`] = `
<span
  class=""
  style="display: contents;"
>
  <span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="_backgroundColor-0hover-surface2 _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _height-t-size-spac100347420 _pr-t-space-spa1360334051 _pl-t-space-spa1360334051 _justifyContent-space-betwe3241 _alignItems-center _cursor-pointer"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa1360334080"
        >
          <div
            class="is_Avatar _display-flex _flexBasis-auto _boxSizing-border-box _minHeight-32px _minWidth-32px _flexShrink-0 _flexDirection-column _alignItems-center _justifyContent-center _position-relative _overflowX-hidden _overflowY-hidden _width-32px _height-32px _maxWidth-32px _maxHeight-32px _borderTopLeftRadius-100000px _borderTopRightRadius-100000px _borderBottomRightRadius-100000px _borderBottomLeftRadius-100000px _pt-0px _pr-0px _pb-0px _pl-0px"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-absolute _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _top-0px _left-0px _right-0px _bottom-0px _zIndex-1"
            >
              <div
                aria-label="Country flag"
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="width: 32px; height: 32px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(https://images-country.meld.io/US/flag.svg);"
                />
                <img
                  alt="Country flag"
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="https://images-country.meld.io/US/flag.svg"
                />
              </div>
            </div>
            <div
              class="is_AvatarFallback _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-absolute _top-0px _left-0px _right-0px _bottom-0px _zIndex-0 _backgroundColor-neutral3"
            />
          </div>
          <span
            class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-bo3548"
            data-disable-theme="true"
          >
            United States
          </span>
        </div>
        <svg
          fill="none"
          height="24"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="Icon"
          >
            <path
              d="M5.99993 11.3333C5.99927 11.3333 5.9986 11.3333 5.99727 11.3333C5.81927 11.3326 5.64993 11.2613 5.52526 11.1346L2.8586 8.42664C2.59993 8.16397 2.60327 7.74197 2.86594 7.48397C3.1286 7.22597 3.54993 7.22863 3.8086 7.4913L6.00393 9.72063L12.1959 3.5293C12.4566 3.26863 12.8779 3.26863 13.1386 3.5293C13.3993 3.7893 13.3993 4.21197 13.1386 4.47197L6.47193 11.1386C6.34659 11.2633 6.1766 11.3333 5.99993 11.3333Z"
              fill="white"
              id="Vector"
            />
          </g>
        </svg>
      </div>
      <div
        style="display: contents;"
      />
    </span>
  </span>
</span>
`;
